Change 'Dicas e Contexto' to 'Contexto' and clean up
Updated section titles and removed unnecessary content.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -75,36 +75,13 @@
     <p><strong>Materiais Recebidos – 01/10/2025 (via Grupo WhatsApp)</strong></p>
 
     <div class="dicas">
-      <h3>Dicas e Contexto</h3>
+      <h3>Contexto</h3>
       <ul>
         <li><strong>Softwares:</strong> OMNIC® (processamento FTIR), SRIM/TRIM (alcance e perda de energia), Origin® ou Python (gráficos) e planilha (cálculo de espessura).</li>
         <li><strong>Amostra:</strong> gelo de N₂O a <strong>11&nbsp;K</strong>, com espectros obtidos sob diferentes fluências de irradiação.</li>
         <li><strong>Nomenclatura:</strong> a <em>fluência</em> de cada medida aparece ao final do nome do arquivo espectral.</li>
         <li><strong>Objetivo:</strong> identificar/quantificar bandas, estimar espessura do filme e avaliar a evolução espectral com a fluência comparando com valores de referência da literatura.</li>
       </ul>
-    </div>
-
-    <h3>Conceitos e equações</h3>
-    <div class="eq">
-      <p><strong>Transmitância</strong> e <strong>Absorbância</strong> (base 10):</p>
-      <p>\[
-        T = \frac{I}{I_0}, \qquad A(\tilde\nu) = \log_{10}\!\left(\frac{1}{T}\right) = \log_{10}\!\left(\frac{I_0}{I}\right)
-      \]</p>
-    </div>
-    <div class="eq">
-      <p><strong>Densidade de coluna</strong> (via profundidade óptica \(\tau\)):</p>
-      <p>\[
-        N = \frac{1}{\mathcal{A}} \int_{\text{banda}} \tau(\tilde\nu)\, d\tilde\nu,
-        \qquad \tau(\tilde\nu) = \ln\!\left(\frac{I_0}{I}\right) = \ln(10)\,A(\tilde\nu)
-      \]</p>
-      <p class="muted">\(\mathcal{A}\) é o A-value (força de banda integrada, cm&nbsp;molec\(^{-1}\)).</p>
-    </div>
-    <div class="eq">
-      <p><strong>Fluência</strong> e <strong>fluxo</strong>:</p>
-      <p>\[
-        F = \Phi\, t
-      \]
-      com \(\Phi\) (projéteis·cm\(^{-2}\)·s\(^{-1}\)) e \(t\) (s).</p>
     </div>
   </div>
 
