--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -158,25 +158,28 @@
   </p>
 </div>
 
-<!-- Cálculo da espessura -->
-<div class="calc" style="text-align:center; margin-top:8px;">
-  <strong>Resultado da espessura (letra a)</strong><br>
-  <div style="display:inline-block; text-align:left; margin-top:6px;">
+
+  <!-- Cálculo da espessura (justificado) -->
+<div class="calc" style="text-align:justify; margin-top:8px;">
+  <strong style="font-size:1.1rem;">Resultado da espessura (letra a)</strong><br>
+
+  <div style="margin-top:8px; line-height:1.6;">
     KBr: <code>d = 25,51 × A</code> → <code>d = 25,51 × 39,3823 ≈ 1.004,64 nm</code> (≈ <strong>1,00 µm</strong>)<br>
-    Si:&nbsp; <code>d = 22,17 × A</code> → <code>d = 22,17 × 39,3823 ≈&nbsp; 873,11 nm</code> (≈ <strong>0,87 µm</strong>)
+    Si:&nbsp; <code>d = 22,17 × A</code> → <code>d = 22,17 × 39,3823 ≈ 873,11 nm</code> (≈ <strong>0,87 µm</strong>)
   </div>
 
-  <p class="muted" style="margin:8px auto 0; max-width:820px;">
-    <strong>Por que KBr ou Si?</strong>
-    <br>• Ambos são transparentes em ~2239 cm⁻¹ (ν₃ do N₂O), então não “poluem” a banda.
-    <br> <span style="font-size: smaller;">(O artigo de **D. Fulvio et al. (2009)** reporta espectros em Si e KBr e mede o pico de absorção da banda $\nu_3$ do $\text{N}_2\text{O}$ em $2239 \text{ cm}^{-1}$ [3], o que confirma que essa região é utilizada para medições, inferindo transparência dos substratos. O presente roteiro também confirma que o pico de interesse é o da banda $\nu_3$ do $\text{N}_2\text{O}$ em $2239 \text{ cm}^{-1}$.)</span>
-    <br>• Existem fatores de conversão validados (F′) para transformar a área em espessura.
-    <br> <span style="font-size: smaller;">(O artigo de **D. Fulvio et al. (2009)** discorre de fonte dos **A-values** (coeficientes de absorção integrada). Esses A-values são as grandezas utilizadas para calcular a densidade de coluna ($N$) a partir da área integrada, e, juntamente com a densidade a $11 \text{ K}$ (também fornecida no artigo de Fulvio), são usados para converter $N$ em espessura ($x$).)</span>
-    <br>• Prático: <em>Si</em> é mais robusto; <em>KBr</em> cobre faixa espectral maior, mas é higroscópico.
-    <br> <span style="font-size: smaller;">(A necessidade de calcular a espessura de forma diferente para Si e KBr está diretamente relacionada aos **A-values distintos** fornecidos para cada substrato na Tabela 4 do artigo de **D. Fulvio et al. (2009) **.</span>
-    <br><strong>Relato:</strong> se o substrato for <em>Si</em>, reporte <strong>0,87 µm</strong>; se for <em>KBr</em>, reporte <strong>1,00 µm</strong>.
-  </p>
+  <div class="muted" style="margin-top:10px; line-height:1.6;">
+    <strong>Por que KBr ou Si?</strong><br>
+    • São transparentes em ~2239 cm⁻¹ (banda ν₃ do N₂O), evitando interferências na medida.<br>
+    • Possuem fatores de conversão (F′) validados para transformar a área integrada em espessura.<br>
+    • Praticidade: <em>Si</em> é mais robusto; <em>KBr</em> cobre faixa espectral maior, porém é higroscópico.
+  </div>
+
+  <div style="margin-top:10px; font-weight:600;">
+    <em>Relato:</em> se o substrato for <em>Si</em>, reporta-se <strong>0,87 µm</strong>; se for <em>KBr</em>, reporta-se <strong>1,00 µm</strong>.
+  </div>
 </div>
+
 
 
 
