Enhance thickness calculation with citations and clarity
Updated the thickness calculation section with citations and clarified the reasons for using KBr or Si.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -159,7 +159,8 @@
 </div>
 
 
-  <!-- Cálculo da espessura (justificado) -->
+
+<!-- Cálculo da espessura (justificado, com citação) -->
 <div class="calc" style="text-align:justify; margin-top:8px;">
   <strong style="font-size:1.1rem;">Resultado da espessura (letra a)</strong><br>
 
@@ -170,13 +171,17 @@
 
   <div class="muted" style="margin-top:10px; line-height:1.6;">
     <strong>Por que KBr ou Si?</strong><br>
-    • São transparentes em ~2239 cm⁻¹ (banda ν₃ do N₂O), evitando interferências na medida.<br>
-    • Possuem fatores de conversão (F′) validados para transformar a área integrada em espessura.<br>
+    • São transparentes em ~2239 cm⁻¹ (banda ν₃ do N₂O), evitando interferências.<br>
+    • Os fatores de conversão <em>F′</em> utilizados para espessura foram adotados conforme a literatura para esses substratos (Fulvio, 2009; ver Tabela 4 / A-values).<br>
     • Praticidade: <em>Si</em> é mais robusto; <em>KBr</em> cobre faixa espectral maior, porém é higroscópico.
   </div>
 
   <div style="margin-top:10px; font-weight:600;">
     <em>Relato:</em> se o substrato for <em>Si</em>, reporta-se <strong>0,87 µm</strong>; se for <em>KBr</em>, reporta-se <strong>1,00 µm</strong>.
+  </div>
+
+  <div style="margin-top:8px; font-size:0.92rem;">
+    <strong>Referência:</strong> Fulvio, D. <em>et al.</em> (2009).
   </div>
 </div>
 
