Update image label and remove noise correction note

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -187,18 +187,15 @@
 
 
 
-<div style="color:#B8860B; font-weight:700;">
-  b. Eliminar a faixa de ruídos e corrigir o baseline (deletar o espectro anterior)
-</div>
     
 <div class="enunciado" style="text-align:justify; margin-top:14px;">
   <strong>b.</strong> Eliminar a faixa de ruídos e corrigir o <em>baseline</em> (deletar o espectro anterior).
 </div>
 
 <div class="print-area" style="text-align:center;">
-  <strong>GIF — Pré-processamento (letra b)</strong><br>
+  <strong>Imagem - Pré-processamento (letra b)</strong><br>
   <img
-    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/b.gif?raw=1"
+    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/b.gif"
     style="max-width:100%;height:auto;display:block;margin:8px auto;"
     alt="View → Display Limits; Process → Smooth; Process → Automatic Baseline Correct; Replace; Save As.">
 </div>
