--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -195,10 +195,11 @@
 <div class="print-area" style="text-align:center;">
   <strong>Imagem - Pré-processamento (letra b)</strong><br>
   <img
-    src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/b.gif?raw=1"
+    src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/b.gif"
     style="max-width:100%;height:auto;display:block;margin:8px auto;"
     alt="View → Display Limits; Process → Smooth; Process → Automatic Baseline Correct; Replace; Save As.">
 </div>
+
 
 <p class="muted" style="text-align:justify; max-width:900px; margin:6px auto 0;">
   Procedimento: limitei a faixa útil em <strong>View → Display Limits</strong>, apliquei suavização leve em
