--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -306,54 +306,124 @@
 
 
     
+<!-- ===================== SEÇÃO 2 (JUSTIFICADA) ===================== -->
+<h3 style="text-align:justify;">2) Espessura do gelo e verificação no SRIM/TRIM</h3>
 
+<div class="enunciado" style="text-align:justify;">
+  <strong>2.a)</strong> <u>Espessura</u>: usando a densidade do N₂O a 11&nbsp;K (Fulvio, 2009) e os A-values, converta \(N\) em espessura \(x\).
+  Aproximação prática: \(x \approx \dfrac{N}{n}\), sendo \(n\) a densidade numérica (molec·cm\(^{-3}\)).
+</div>
 
+<div class="enunciado" style="text-align:justify;">
+  <strong>2.b)</strong> <u>Alcance do feixe</u>: no SRIM/TRIM, obtenha o <em>stopping power</em> (unidades \(\mathrm{keV\,\mu m^{-1}}\)) e o alcance em N₂O. Com base em \(x\), discuta a presença de <strong>implantação</strong>.
+</div>
 
-
-    <h3>2) Espessura do gelo e verificação no SRIM/TRIM</h3>
-    <div class="enunciado">
-      <strong>2.a)</strong> <u>Espessura</u>: usando a densidade do N₂O a 11&nbsp;K (Fulvio, 2009) e os A-values, converta \(N\) em espessura \(x\).
-      Aproximação prática: \(x \approx \dfrac{N}{n}\), sendo \(n\) a densidade numérica (molec·cm\(^{-3}\)).
+<!-- Local adequado: inserção dos dados da planilha Ref.[7] (em tamanho pequeno) -->
+<div class="print-area" style="text-align:justify; margin-top:8px;">
+  <strong>Dados da planilha (Ref.[7])</strong>
+  <div style="font-size:0.9rem; opacity:0.95; margin-top:6px;">
+    <div><em>Arquivo:</em> <code>Ices calculations dose v1 Bordalo.pdf</code> &nbsp;|&nbsp; <em>Aba:</em> <code>Pasta1</code></div>
+    <div style="margin-top:6px;">
+      <table border="1" cellpadding="6" style="border-collapse:collapse; width:100%; max-width:900px;">
+        <thead style="background:#f5f5f5;">
+          <tr>
+            <th colspan="4" style="text-align:left;">Parâmetros principais (conforme planilha)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><strong>N (molec/cm²)</strong></td>
+            <td>1,48×10<sup>18</sup></td>
+            <td><strong>Se (keV/mm)</strong></td>
+            <td>4,0</td>
+          </tr>
+          <tr>
+            <td><strong>ρ (g/cm³)</strong></td>
+            <td>0,500</td>
+            <td><strong>M (g/mol)</strong></td>
+            <td>44,000</td>
+          </tr>
+          <tr>
+            <td><strong>F (ion/cm²)</strong></td>
+            <td>1,4×10<sup>16</sup></td>
+            <td><strong>ℓ (mm)</strong></td>
+            <td>1,24</td>
+          </tr>
+          <tr>
+            <td><strong>Dose (eV/molec)</strong></td>
+            <td>29,84</td>
+            <td><strong>Dose (MGy)</strong></td>
+            <td>179,43</td>
+          </tr>
+          <tr>
+            <td><strong>Absorbance</strong></td>
+            <td>20,664</td>
+            <td><strong>A-value (cm/molec)</strong></td>
+            <td>2,80×10<sup>−17</sup></td>
+          </tr>
+          <tr>
+            <td><strong>Wavenumber (cm⁻¹)</strong></td>
+            <td>4527</td>
+            <td><strong>Wavelength (µm)</strong></td>
+            <td>2,21</td>
+          </tr>
+        </tbody>
+      </table>
+      <div style="margin-top:6px;">
+        <small>
+          Outros campos presentes na planilha (ex.: valores de ρ e M para CH₄, NH₃, H₂O; conversores de dose/espessura; “sticking probability”; fluxo/feixe) também constam na aba <em>Pasta1</em>. 
+          Esses itens podem ser usados para checagens e cálculos auxiliares (dose, alcance etc.). :contentReference[oaicite:1]{index=1}
+        </small>
+      </div>
     </div>
-    <div class="enunciado">
-      <strong>2.b)</strong> <u>Alcance do feixe</u>: no SRIM/TRIM, obtenha o <em>stopping power</em> (unidades \(\mathrm{keV\,\mu m^{-1}}\)) e o alcance em N₂O. Com base em \(x\), discuta a presença de <strong>implantação</strong>.
-    </div>
-    <div class="print-area"><strong>Print 4</strong><br><em>(Inserir captura: resultados SRIM/TRIM e conclusão)</em></div>
-
-    <h3>3) Bandas “Pai” (não irradiada) e evolução com a fluência</h3>
-    <div class="enunciado">
-      <strong>3.1)</strong> <u>Identificação</u>: no espectro não irradiado, identifique picos em 589, 1166, 1295, 2239, 2581, 3380 e 3706&nbsp;cm\(^{-1}\). Associe espécies (e contaminantes) confrontando com Fulvio (2009), Tabela&nbsp;3, e literatura.
-    </div>
-    <div class="print-area"><strong>Print 5</strong><br><em>(Inserir captura: picos “Pai”)</em></div>
-    <div class="enunciado"><strong>3.2)</strong> Integre as áreas dessas bandas no espectro não irradiado.</div>
-    <div class="enunciado"><strong>3.3)</strong> Repita a integração para todas as fluências e, quando pertinente, estime \(N\).</div>
-    <div class="enunciado">
-      <strong>3.4)</strong> Gere gráficos no Origin/Python:
-      <br>• <em>Área × Fluência</em> &nbsp;&nbsp;• <em>Densidade de Coluna</em> \((N)\) <em>× Fluência</em>.
-    </div>
-    <div class="print-area"><strong>Print 6</strong><br><em>(Inserir gráficos: Área×Fluência e N×Fluência — “Pai”)</em></div>
-    <div class="enunciado"><strong>3.5)</strong> Compare tendências com Fulvio (2009), Fig.&nbsp;4b (saturação, mudanças de perfil, deslocamentos).</div>
-
-    <h3>4) Bandas “Filho” (produtos formados)</h3>
-    <div class="enunciado">
-      <strong>4.1)</strong> <u>Evolução espectral</u>: acompanhe picos em 781, 1040, 1702, 1718 e 2139&nbsp;cm\(^{-1}\) do não irradiado até a maior fluência. Proponha atribuições com base na literatura.
-    </div>
-    <div class="print-area"><strong>Print 7</strong><br><em>(Inserir captura: evolução das bandas “Filho”)</em></div>
-    <div class="enunciado"><strong>4.2)</strong> Integre áreas e (quando aplicável) estime \(N\).</div>
-    <div class="enunciado"><strong>4.3)</strong> Plote <em>Área × Fluência</em> e <em>\(N\) × Fluência</em>; discuta formação, destruição e sputtering.</div>
-    <div class="print-area"><strong>Print 8</strong><br><em>(Inserir gráficos: Área×Fluência e N×Fluência — “Filho”)</em></div>
-
-    <h3>5) Entrega</h3>
-    <p>
-      Versão online (GitHub Pages) é esta página.
-      
-      <br>
-      <a href="https://thallescotta.github.io/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/3rd_exercise_FTIR_N2O_irradiation_analysis.html" target="_blank" rel="noopener">
-        https://thallescotta.github.io/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/3rd_exercise_FTIR_N2O_irradiation_analysis.html
-      </a>
-    </p>
   </div>
 </div>
+
+<!-- Espaço para o print do SRIM/TRIM (como pede o enunciado) -->
+<div class="print-area" style="text-align:justify; margin-top:8px;">
+  <strong>Print 4</strong><br>
+  <em>(Inserir captura: resultados SRIM/TRIM e conclusão)</em>
+</div>
+
+<!-- ===================== SEÇÃO 3 (mantida, apenas justificando títulos e parágrafos) ===================== -->
+<h3 style="text-align:justify;">3) Bandas “Pai” (não irradiada) e evolução com a fluência</h3>
+<div class="enunciado" style="text-align:justify;">
+  <strong>3.1)</strong> <u>Identificação</u>: no espectro não irradiado, identifique picos em 589, 1166, 1295, 2239, 2581, 3380 e 3706&nbsp;cm\(^{-1}\). Associe espécies (e contaminantes) confrontando com Fulvio (2009), Tabela&nbsp;3, e literatura.
+</div>
+<div class="print-area" style="text-align:justify;"><strong>Print 5</strong><br><em>(Inserir captura: picos “Pai”)</em></div>
+<div class="enunciado" style="text-align:justify;"><strong>3.2)</strong> Integre as áreas dessas bandas no espectro não irradiado.</div>
+<div class="enunciado" style="text-align:justify;"><strong>3.3)</strong> Repita a integração para todas as fluências e, quando pertinente, estime \(N\).</div>
+<div class="enunciado" style="text-align:justify;">
+  <strong>3.4)</strong> Gere gráficos no Origin/Python:
+  <br>• <em>Área × Fluência</em> &nbsp;&nbsp;• <em>Densidade de Coluna</em> \((N)\) <em>× Fluência</em>.
+</div>
+<div class="print-area" style="text-align:justify;"><strong>Print 6</strong><br><em>(Inserir gráficos: Área×Fluência e N×Fluência — “Pai”)</em></div>
+<div class="enunciado" style="text-align:justify;"><strong>3.5)</strong> Compare tendências com Fulvio (2009), Fig.&nbsp;4b (saturação, mudanças de perfil, deslocamentos).</div>
+
+<h3 style="text-align:justify;">4) Bandas “Filho” (produtos formados)</h3>
+<div class="enunciado" style="text-align:justify;">
+  <strong>4.1)</strong> <u>Evolução espectral</u>: acompanhe picos em 781, 1040, 1702, 1718 e 2139&nbsp;cm\(^{-1}\) do não irradiado até a maior fluência. Proponha atribuições com base na literatura.
+</div>
+<div class="print-area" style="text-align:justify;"><strong>Print 7</strong><br><em>(Inserir captura: evolução das bandas “Filho”)</em></div>
+<div class="enunciado" style="text-align:justify;"><strong>4.2)</strong> Integre áreas e (quando aplicável) estime \(N\).</div>
+<div class="enunciado" style="text-align:justify;"><strong>4.3)</strong> Plote <em>Área × Fluência</em> e <em>\(N\) × Fluência</em>; discuta formação, destruição e sputtering.</div>
+<div class="print-area" style="text-align:justify;"><strong>Print 8</strong><br><em>(Inserir gráficos: Área×Fluência e N×Fluência — “Filho”)</em></div>
+
+<h3 style="text-align:justify;">5) Entrega</h3>
+<p style="text-align:justify;">
+  Versão online (GitHub Pages) é esta página.
+  <br>
+  <a href="https://thallescotta.github.io/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/3rd_exercise_FTIR_N2O_irradiation_analysis.html" target="_blank" rel="noopener">
+    https://thallescotta.github.io/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+  </a>
+</p>
+
+
+
+
+
+
+  
 
 <!-- ================= EN-US ================= -->
 <div id="en">
